add simple clock with alarm functionality

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
     <script type="text/javascript" src="build/js/app.js"></script>
   </head>
   <body>
+    <div id="time">
+    </div>
+
+    <form id="alarm-clock-form">
+      <label for="set-alarm"></label>
+      <input type="time" id="set-alarm">
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
